2006-04-26  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-link.[ch]: Added book & page specification

	* src/dh-parser.c: Pass 'book' & 'page' parameter when parsing 
	  devhelp files.

	* src/dh-keyword-model.c: Use the 'book:bookname' and 'page:pagename' construct 
	  to perform book and page sensitive searches.

	* src/dh-search.c: Updated to reflect changes; now you can enter a book name
	  and or a page name to effect the search results (no completion implemented
	  here though unfortunately).

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/nb.po: Updated this translation
	* po/no.po: Removed this translation.

2006-04-06  Johannes Schmid <jhs@cvs.gnome.org>

	* libdevhelp-1.0.pc.in: Correct requirement for libwnck-1.0.

2006-04-07  Richard Hult  <richard@imendio.com>

	* src/dh-main.c (main): Free the bacon! (message connection).

2006-04-03  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* ui/devhelp.glade: Add keyboard mnemonics in preferences
	dialog (bug #336112, Wouter Bolsterlee)

2006-03-30  Richard Hult  <richard@imendio.com>

	* misc/gedit-plugin/devhelp/: Make it actually work.

2006-03-29  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (message_received_cb): Fix typo.
	
	* configure.in:
	* misc/Makefile.am:
	* misc/gedit-plugin: Add very simple gedit plugin for devhelp.

2006-03-26  Behdad Esfahbod  <behdad@gnome.org>

	* ui/Makefile.am: Respect DESTDIR.

2006-03-18  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Substitute GECKO_EXTRA_LIBS.
	Fixes the build with firefox trunk.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	Bug #332560.

	* Makefile.am: Fix builddir != srcdir build.
	* m4/gecko.m4: Sync gecko.m4 with Epiphany.
	* configure.in:
	* src/Makefile.am:
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h: Support xulrunner trunk.